# dark-forest

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
abis/: DarkForestArtifactUtils.json  DarkForestCore.json  DarkForestGPTCredit.json  DarkForestGetters.json  DarkForestLazyUpdate.json  DarkForestPlanet.json  DarkForestStorageV1.json  DarkForestTokens.json  DarkForestUtils.json  Verifier.json  Whitelist.json
contracts/: Account.sol  AccountFactory.sol  Create2.sol  Proxy.sol
crates/ark-circom/: Cargo.toml
crates/ark-circom/circom/: circom.txt  circuit.circom  circuit.r1cs  circuit_final.zkey  proof.json  verification_key.json
crates/ark-circom/src/: circom_qap.rs  lib.rs  main.rs  memory.rs  wasm.rs  zkey.rs
crates/ark-circom/src/circuit/: circom.rs  mod.rs  r1cs_reader.rs
crates/ark-circom/src/solidity_compat/: mod.rs  types.rs
crates/ark-circom/test-vectors/: mycircuit.wasm
crates/ark-circom/tests/: groth16.rs  solidity.rs
crates/dark-forest/: Cargo.toml
crates/dark-forest/src/: lib.rs
crates/df-cli/: Cargo.toml
crates/df-cli/src/: main.rs  map.rs
crates/df-contracts/: Cargo.toml
crates/df-contracts/src/: config.rs  lib.rs
crates/df-contracts/src/bindings/: darkforestgetters.rs  darkforestgptcredit.rs  darkforeststoragev1.rs  darkforesttypes.rs  mod.rs  whitelist.rs
crates/df-engine/: Cargo.toml
crates/df-engine/round3-data/: init.wasm  move.wasm
crates/df-engine/src/: contracts.rs  lib.rs
crates/df-engine/src/prover/: init.rs  mod.rs  mover.rs
crates/df-types/: Cargo.toml
crates/df-types/src/: constants.rs  lib.rs  map.rs  mod.rs  utils.rs
crates/df-types/src/explorer/: directional.rs  mod.rs  spiral.rs
crates/df-types/src/planet/: conversion.rs  info.rs  location.rs
scripts/: abis.sh
src/: config.rs  constants.rs  lib.rs  main.rs  utils.rs
src/bindings/: darkforestcore.rs  darkforestinitialize.rs  darkforesttokens.rs  mod.rs  verifier.rs
src/engine/: contracts.rs  mod.rs
src/types/: map.rs  mod.rs  planet.rs
src/types/planet/: conversion.rs  default.rs  id.rs  info.rs  location.rs  mod.rs  upgrades.rs
test-vectors/: large-map.json  many-planets.json  planets.json
