[package]
name = "dark-forest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1.7.1", features = ["macros"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1.8.0"
derive_more = "0.99.14"

# TODO: Enable this when we add the explorer/snarker code
# darkforest = { git = "https://github.com/projectsophon/darkforest-rs" }

# cli
structopt = "0.3.21"
color-eyre = "0.5.11"


[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
