[package]
name = "df-engine"
version = "0.1.0"
edition = "2018"

[dependencies]
df-types = { path = "../df-types" }
df-contracts = { path = "../df-contracts" }

ethers = { git = "https://github.com/gakonst/ethers-rs" }
ark-circom = { git = "https://github.com/gakonst/ark-circom" }
# ark-circom = { path = "/Users/Georgios/paradigm/special-projects/ark-circom"}
ark-std = { version = "0.3.0", features = ["parallel"] }
ark-bn254 = { version = "0.3.0" }
# ark-groth16 = "0.3.0"
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", features = ["parallel"] }
# ark-groth16 = { git = "https://github.com/gakonst/groth16", version = "0.3.0", branch = "calculate-matrices" }
num-bigint = "0.4.0"
num-traits = "0.2.14"
perlin_noise = "1.0.1"
reqwest = "0.11.4"
serde_json = "1.0.64"
serde = "1.0.126"
color-eyre = "0.5.11"


[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros"] }
