[package]
name = "df-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1.8.0"
derive_more = "0.99.14"
darkforest-mimc = { package = "darkforest", git = "https://github.com/projectsophon/darkforest-rs" }
thiserror = "1.0.25"
